# data-processing-engine-comparison

./: .gitignore  MULTIPROCESSING_SUMMARY.md  README.md  benchmark.env  benchmark.py  benchmark.yaml  benchmark_cli.py  benchmark_results.json  conftest.py  demo_multiprocessing.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_multiprocessing.py
.github/: copilot-instructions.md
specs/001-create-a-project/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-a-project/contracts/: cli-interface.md  engine-interface.md
src/: __init__.py  benchmark_runner.py
src/engines/: __init__.py  arrow_engine.py  base.py  daft_engine.py  duckdb_engine.py  factory.py  polar_engine.py  starrocks_engine.py
src/models/: __init__.py  benchmark.py
src/utils/: __init__.py  config.py  metrics.py
tests/contract/: test_cli_interface.py  test_engine_interface.py
tests/integration/: test_contracts.py  test_integration.py
tests/unit/: test_benchmark_runner.py  test_engines.py  test_models.py  test_utils.py
