[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "query-engine-benchmark"
version = "0.1.0"
description = "Performance comparison tool for DuckDB, Daft, and StarRocks query engines on Iceberg tables"
authors = [
    {name = "Query Engine Benchmark Team"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyiceberg[hive]>=0.5.0",
    "duckdb>=0.9.0",
    "getdaft>=0.2.0",
    "pymysql>=1.1.0",
    "pyarrow>=14.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
benchmark = "src.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
